syntax = "proto3";

package rpc;

option go_package = "internal/generated/rpc";

service AgentStatus {
  rpc userSetStatus(UserRequest) returns (UserSetStatusResponse);
  rpc userGetLog(UserRequest) returns (UserGetLogResponse);
}

message UserRequest {
  Agent user = 1;
}

message UserSetStatusResponse {}

message UserGetLogResponse {
  repeated Log logs = 1;
}

message Agent {
  string login = 1;
  Statuses status = 2;

  enum Statuses {
    ACTIVE = 0;
    REQ_INACTIVE = 1;
    INACTIVE = 2;
    REQ_BREAK = 3;
    BREAK = 4;
    FORCE_MAJEURE = 5;
    CHAT = 6;
    LETTER = 7;
  }
}

message Log {
  string login = 1;
  Statuses src = 2;
  Statuses dst = 3;
  Modes mode = 4;
  string processed_at = 5;

  enum Statuses {
    ACTIVE = 0;
    REQ_INACTIVE = 1;
    INACTIVE = 2;
    REQ_BREAK = 3;
    BREAK = 4;
    FORCE_MAJEURE = 5;
    CHAT = 6;
    LETTER = 7;
  }
  enum Modes {
    MAN = 0;
    AUT = 1;
  }
}


